# extensible-records-minimal

./: README.md  dune-project  extensible-records-minimal.opam
src/: dune  extensible_records_minimal.ml  extensible_records_without_gadt.ml
